# devue_plugin_template

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
dependencies/: CMakeLists.txt
source/: CMakeLists.txt
source/impl/: CMakeLists.txt  devue_plugin_impl.cpp
source/resources/: plugin.rc
source/src/: devue_plugin.cpp  devue_plugin.hpp  plugin.hpp
src/: CMakeLists.txt
src/adapters/: CMakeLists.txt  dv_model_plugin_adapter.cpp  dv_plugin_adapter.cpp  dv_texture_plugin_adapter.cpp
src/core/: CMakeLists.txt
src/impl/: CMakeLists.txt  devue_plugin_impl.cpp  devue_plugin_impl.hpp
src/plugin/: CMakeLists.txt  devue_plugin.cpp  devue_plugin.hpp
src/plugins/: CMakeLists.txt
src/plugins/model/devue/: CMakeLists.txt  dv_model_plugin.cpp  dv_model_plugin.hpp
src/plugins/texture/devue/: CMakeLists.txt  dv_texture_plugin.cpp
