CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

IF(POLICY CMP0135)
    CMAKE_POLICY(SET CMP0135 NEW)
ENDIF()

PROJECT(devue_plugin CXX)

GET_DIRECTORY_PROPERTY(PARENT_DIR PARENT_DIRECTORY)
IF(PARENT_DIR STREQUAL "")
    SET(PLUGIN_TOP_LEVEL TRUE)
ELSE()
    SET(PLUGIN_TOP_LEVEL FALSE)
ENDIF()

IF(NOT WIN32)
    MESSAGE(FATAL_ERROR "Unsupported platform.")
ENDIF()

IF(NOT "${CMAKE_SIZEOF_VOID_P}" STREQUAL "8")
    MESSAGE(FATAL_ERROR "Unsupported architecture.")
ENDIF()

ENABLE_LANGUAGE("RC")

IF(PLUGIN_TOP_LEVEL)
    SET(PLUGIN_OUTPUT_DIR "binaries/windows/${CMAKE_CXX_COMPILER_ID}/${CMAKE_BUILD_TYPE}")
    STRING(TOLOWER ${PLUGIN_OUTPUT_DIR} PLUGIN_OUTPUT_DIR_LOWER)

    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/${PLUGIN_OUTPUT_DIR_LOWER}")
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/${PLUGIN_OUTPUT_DIR_LOWER}")
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/${PLUGIN_OUTPUT_DIR_LOWER}")

    IF(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
        ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
        ADD_DEFINITIONS(-D_WINDOWS)

        SET(CMAKE_C_FLAGS           "/W3 /utf-8")
        SET(CMAKE_C_FLAGS_DEBUG     "/MTd /Od /Ob0 /RTC1 /Zi")
        SET(CMAKE_C_FLAGS_RELEASE   "/MT /O2 /Ob2 /GL /DNDEBUG")
    
        SET(CMAKE_CXX_FLAGS         "/std:c++20 /W3 /EHsc /utf-8 /we4297")
        SET(CMAKE_CXX_FLAGS_DEBUG   "/MTd /Od /Ob0 /RTC1 /Zi")
        SET(CMAKE_CXX_FLAGS_RELEASE "/MT /O2 /Ob2 /GL /DNDEBUG")

        IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
            ADD_LINK_OPTIONS("/DEBUG")
        ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
            ADD_LINK_OPTIONS("/LTCG")
        ENDIF()
    ENDIF()
ENDIF()

ADD_SUBDIRECTORY("dependencies")
ADD_SUBDIRECTORY("source")