FILE(GLOB_RECURSE BUILD_FILES CONFIGURE_DEPENDS 
    "src/*.cpp"
)

SET(PLUGIN_RESOURCE_FILE "${CMAKE_CURRENT_SOURCE_DIR}/resources/plugin.rc")

ADD_LIBRARY(devue_plugin SHARED
    ${PLUGIN_RC}
    ${BUILD_FILES}
)

# SET FILENAME
SET_TARGET_PROPERTIES(devue_plugin PROPERTIES OUTPUT_NAME "dv_plg_template")

TARGET_INCLUDE_DIRECTORIES(devue_plugin PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")

TARGET_LINK_LIBRARIES(devue_plugin PRIVATE devue_sdk)
