CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

FILE(GLOB_RECURSE INCLUDES CONFIGURE_DEPENDS 
	"${CMAKE_SOURCE_DIR}/include/*.hpp"
)

SET(PLUGIN_RC "${CMAKE_SOURCE_DIR}/src/resources/plugin.rc")

ADD_LIBRARY(devue_plugin STATIC
	${INCLUDES}
	${PLUGIN_CORE}
	${PLUGIN_RC}

	"devue_plugin_impl.cpp"
)

# SET FILENAME
SET_TARGET_PROPERTIES(devue_plugin PROPERTIES OUTPUT_NAME "dv_plg_template")

TARGET_INCLUDE_DIRECTORIES(devue_plugin PRIVATE "${PLUGIN_LIB_DIR}")
TARGET_INCLUDE_DIRECTORIES(devue_plugin PRIVATE "${PLUGIN_LIB_DIR}/glm")
TARGET_INCLUDE_DIRECTORIES(devue_plugin PRIVATE "${PLUGIN_LIB_DIR}/json")
TARGET_INCLUDE_DIRECTORIES(devue_plugin PRIVATE "${PLUGIN_CORE_DIR}")
TARGET_INCLUDE_DIRECTORIES(devue_plugin PRIVATE "${PLUGIN_INCLUDE_DIR}")
TARGET_INCLUDE_DIRECTORIES(devue_plugin PRIVATE "${PLUGIN_SOURCE_DIR}/impl")