CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

FILE(GLOB_RECURSE INCLUDES CONFIGURE_DEPENDS 
	"${CMAKE_SOURCE_DIR}/include/*.hpp"
)

ADD_LIBRARY(devue_plugin SHARED
	${INCLUDES}
	"devue_plugin.cpp"
)

TARGET_LINK_LIBRARIES(devue_plugin devue_plugin_core)

TARGET_INCLUDE_DIRECTORIES(devue_plugin PRIVATE "${PLUGINS_LIB_DIR}")
TARGET_INCLUDE_DIRECTORIES(devue_plugin PRIVATE "${PLUGINS_LIB_DIR}/glm")