CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

FILE(GLOB_RECURSE INCLUDES CONFIGURE_DEPENDS 
	"${CMAKE_SOURCE_DIR}/include/*.hpp"
)

ADD_LIBRARY(dv_plg_mod_devue SHARED
	${INCLUDES}
	"dv_model_plugin.cpp"
)

TARGET_INCLUDE_DIRECTORIES(dv_plg_mod_devue PRIVATE "${PLUGINS_LIB_DIR}")
TARGET_INCLUDE_DIRECTORIES(dv_plg_mod_devue PRIVATE "${PLUGINS_LIB_DIR}/glm")